--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Game Project Shell</title>
+    <script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./main.js"></script>
@@ -13,9 +14,14 @@
     <script type="text/javascript" src="./desert.js"></script>
     <script type="text/javascript" src="./boundingBox.js"></script>
     <script type="text/javascript" src="./environment.js"></script>
+    <script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
   </head>
   <body>
-
+    
+    <div id = "text"></div>
+    <button id="save" type="button">Save</button>
+    <button id="load" type="button">Load</button>
+    <h1></h1>
     <canvas
       id="gameWorld"
       tabindex="1"
